# grams-tof-library

./: .gitignore  CMakeLists.txt  README.md
00build/: CMakeCache.txt  GramsTofLibraryConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt
00build/FlightOps/: Makefile  cmake_install.cmake
Common/cmake/: GramsLibraryConfig.cmake.in  colors.cmake  root_tools.cmake  targets.cmake
Common/utils/: LinkDefMakerMulti.py
FlightOps/: CMakeLists.txt  CMakeLists.txt.org
FlightOps/Documents/: BOOST_BUILD.md  boost-user-config-homebrew.jam
FlightOps/Time-of-Flight/: CMakeLists.txt
FlightOps/include/: GRAMS_TOF_Analyzer.h  GRAMS_TOF_Client.h  GRAMS_TOF_CommandClient.h  GRAMS_TOF_CommandCodec.h  GRAMS_TOF_CommandDefs.h  GRAMS_TOF_CommandDispatch.h  GRAMS_TOF_CommandServer.h  GRAMS_TOF_Config.h  GRAMS_TOF_DAQController.h  GRAMS_TOF_DAQManager.h  GRAMS_TOF_EventClient.h  GRAMS_TOF_EventServer.h  GRAMS_TOF_FDManager.h  GRAMS_TOF_Logger.h  GRAMS_TOF_PythonIntegration.h
FlightOps/sh/: startup.sh
FlightOps/src/: GRAMS_TOF_Analyzer.cpp  GRAMS_TOF_Client.cpp  GRAMS_TOF_CommandClient.cpp  GRAMS_TOF_CommandCodec.cpp  GRAMS_TOF_CommandDispatch.cpp  GRAMS_TOF_CommandServer.cpp  GRAMS_TOF_Config.cpp  GRAMS_TOF_DAQController.cpp  GRAMS_TOF_DAQManager.cpp  GRAMS_TOF_EventClient.cpp  GRAMS_TOF_EventServer.cpp  GRAMS_TOF_FDManager.cpp  GRAMS_TOF_PythonIntegration.cpp  GRAMS_TOF_PythonIntegration.cpp.org
FlightOps/tools/: grams_tof_client.cpp  grams_tof_client_daq.cpp  grams_tof_config_test.cpp  grams_tof_daq.cpp  test_grams_tof_client_daq.cpp  test_grams_tof_config.cpp  test_grams_tof_server_daq.cpp
Tool/config/: grams_env.bash
